Major Changes to Portrait and Main Page, Component Added (BMC) and hero files
Portrait :
Adjustment to position of card when focused
Modified colours on card for each hero type
Added ForwardRef for Parent component to access child function

Main page:
Added Helper Function to parse season
Fixed Replace Keyword Function
Adjusted UseEffect for getting hero data
Buy Me Coffee(BMC) component added on page
Added Changes and Fixes button (incomplete )
Added Element and mapping function to Populate Hero Cards on page
compID UseState refactored to CardID
Fixed Issue on Change Description only showing buffs

New Component Added Buy Me Coffee

Hero Files Changes:
Adam Warlock
Black Panther
Blade
Captain America
Cloak & Dagger
Doctor Strange
Emma Frost
Groot
Hulk
Invisible Woman
Iron man
Rocket Raccoon
Spider Man
Star Lord
Winter Soldier
(Naming Convention fixed for other hero files)

--- a/data/Winter_Soldier/Winter_Soldier_Season3.json
+++ b/data/Winter_Soldier/Winter_Soldier_Season3.json
@@ -51,8 +51,8 @@
         "value": "Enemies that take damage from the projectile will no longer receive damage from the spell field"
       }
     ],
-    "change": 0,
-    "changeDescription": "Projectile +5 (70\u219275), Area -5 (70\u219265), falloff reduced (65%\u219260%)"
+    "change": 1,
+    "changeDescription": "Adjust Roterstern damage falloff maximum at 40m from (60%) \u2192 (70%)"
   },
   "spell2": {
     "key": "Q",
@@ -93,8 +93,8 @@
         "value": "Stars Aligned (with Captain America)"
       }
     ],
-    "change": 2,
-    "changeDescription": "Bugfixes: corrected ultimate hit detection & reset edge cases; Base damage 100\u219280; Culling threshold 20%\u219215%"
+    "change": 0,
+    "changeDescription": ""
   },
   "spell3": {
     "key": "Shift",
